# $Id$

noinst_LIBRARIES = libvcd.a

INCLUDES = -I$(top_srcdir)

libvcd_a_SOURCES = \
	vcd.c \
	vcd.h \
	vcd_bytesex.c \
	vcd_bytesex.h \
	vcd_cd_sector.c \
	vcd_cd_sector.h \
	vcd_cd_sector_private.h \
	vcd_data_structures.c \
	vcd_data_structures.h \
	vcd_dict.h \
	vcd_directory.c \
	vcd_directory.h \
	vcd_files.c \
	vcd_files.h \
	vcd_files_private.h \
	vcd_iso9660.c \
	vcd_iso9660.h \
	vcd_iso9660_private.h \
	vcd_logging.c \
	vcd_logging.h \
	vcd_mpeg.c \
	vcd_mpeg.h \
	vcd_mpeg_stream.c \
	vcd_mpeg_stream.h \
	vcd_obj.h \
	vcd_pbc.h \
	vcd_pbc.c \
	vcd_salloc.c \
	vcd_salloc.h \
	vcd_stream.c \
	vcd_stream.h \
	vcd_stream_stdio.c \
	vcd_stream_stdio.h \
	vcd_util.c \
	vcd_util.h \
	vcd_types.h 
